--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,7 +11,7 @@
         tools:layout="@layout/fragment_report" />
     <fragment
         android:id="@+id/floodFragment"
-        android:name="com.example.gigih_final2.presentation.fragment.FloodFragment"
+        android:name="com.example.gigih_final2.presentation.fragment.Flood.FloodFragment"
         android:label="fragment_flood"
         tools:layout="@layout/fragment_flood" />
     <fragment
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/settingFragment"
-        android:name="com.example.gigih_final2.presentation.fragment.SettingFragment"
+        android:name="com.example.gigih_final2.presentation.fragment.Setting.SettingFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_setting" />
 </navigation>
